[package]
name = "dstub"
version = "0.1.0"
edition = "2021"
authors = ["N0D4N"]
readme = "README.md"
repository = "https://github.com/TanteiBot/dstub"
license-file = "LICENSE"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
incremental = true

[dependencies]
tokio = { version = "*", features = ["macros", "rt-multi-thread", "time"] }
serenity = { version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
clap = { version = "*", features = ["derive"] }